# model-deprecation-tracker

./: README.md  deprecations.ics  main.py  pyproject.toml  requirements.txt
.github/workflows/: update-deprecations.yml
data/: deprecations.json
generators/: ics_generator.py  readme_generator.py  slack_notifier.py
scraper/: __init__.py  anthropic_scraper.py  azure_foundry_scraper.py  base.py  bedrock_scraper.py  fireworks_scraper.py  gemini_scraper.py  openai_scraper.py  vertex_scraper.py
tests/: test_ics_generator.py  test_readme_generator.py  test_scrapers.py  test_slack_notifier.py
tests/fixtures/: anthropic.html  azure_foundry.html  bedrock.html  fireworks.md  gemini.html  openai.html  vertex.html
